--- a/index.css
+++ b/index.css
@@ -22,13 +22,16 @@ main{
 p{
 padding: 0.5rem;
 }
-a{
+#menuitem{
   color: black; 
   background-color: transparent; 
   text-decoration: none;
 }
 #post{
- padding:0.25rem;
+  padding:0.5rem;
+  color: black; 
+  background-color: transparent; 
+  text-decoration: underline black;
 }
 hr{
 margin-top:0;
