--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@
 font-family: 'EB Garamond', serif;
 }
 hr{
-margin-top:0;
+//margin-top:0;
 }
 #header{
 text-align:center;
@@ -12,7 +12,7 @@ max-width: 120ch;
 }
 #header2{
 margin-bottom:0px;
-font-size:40px;
+font-size:30px;
 }
 #menu{
 word-spacing:30px;
