--- a/index.css
+++ b/index.css
@@ -38,3 +38,22 @@ a{
   background-color: transparent; 
   text-decoration: underline black;
 }
+figure{
+  float: center;
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  margin: 0.5em;
+  padding: 0.5em;
+}
+img {
+    display: block;
+    max-width:540px; /* you can use % */
+    width: 50%
+    height: auto;
+    margin-right: auto;
+    margin-left: auto;
+}
+
