--- a/index.css
+++ b/index.css
@@ -1,8 +1,8 @@
  *{
 /*font-family: 'EB Garamond', serif;*/
 /*color: black;*/
-  background-color: #111111;
-  color: white;
+  background-color: #282828;
+  color: #ebdbb2;
 }
 hr{
 //margin-top:0;
@@ -29,18 +29,19 @@ main{
   text-align: justify;
   font-size:25px;
 }
+
+a{
+  color: #fbf1c7;
+  background-color: transparent;
+  text-decoration: underline white;
+}
 #post{
 padding: 0.5rem;
 }
 #menuitem{
-  color: white;
+  color: #ebdbb2;
   background-color: transparent;
   text-decoration: none;
-}
-a{
-  color: white;
-  background-color: transparent;
-  text-decoration: underline white;
 }
 figure{
   float: center;
