--- a/index.css
+++ b/index.css
@@ -61,8 +61,12 @@ img {
     margin-right: auto;
     margin-left: auto;
 }
+code {
+  border: 1px solid #999;
+}
 pre code {
   border: 1px solid #999;
   display: block;
   padding: 20px;
+  overflow: scroll;
 }
