smaller fonts for mobile

--- a/themes/researcher/assets/sass/researcher.scss
+++ b/themes/researcher/assets/sass/researcher.scss
@@ -82,7 +82,7 @@ body {
 // title
 .navbar-brand {
     @extend %link-dark;
-    font-size: $font-size;
+    font-size: 0.9*$font-size;
 }
 
 .nav-link {
