--- a/themes/researcher/assets/sass/researcher.scss
+++ b/themes/researcher/assets/sass/researcher.scss
@@ -24,7 +24,7 @@ $y-medium: 6.0rem;
     text-decoration: none;
 
 
-    border-bottom:1px solid $white;
+    border-bottom:4px solid $white;
     & * {
         color: $white;
     }
@@ -95,6 +95,7 @@ body {
         max-width:  60ch;
 
     *{
+        line-height: 2.8ch;
 
     }
     a {
@@ -168,7 +169,7 @@ body {
     blockquote {
         border-left: 4px solid;
         font-style: italic;
-        margin: $y-medium 0;
+        margin: $y-small 0;
         padding: 8px 8px;
     }
     code {
