--- a/themes/researcher/assets/sass/researcher.scss
+++ b/themes/researcher/assets/sass/researcher.scss
@@ -64,11 +64,10 @@ body {
 
 @media (max-width: 60em){
     body{
-
-    margin-left:0.5em;
-    margin-top:0.5em;
-    margin-right:0.5em;
-    padding:0.5em;
+        margin-left:0.5em;
+        margin-top:0.5em;
+        margin-right:0.5em;
+        padding:0.5em;
     }
 }
 
@@ -79,7 +78,16 @@ body {
 // title
 .navbar-brand {
     @extend %link-dark;
-    font-size: 2*$font-size;
+    // font-size: 2vw;
+    /* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+    @media screen and (min-width: 501px) {
+        font-size: 2*$font-size;
+    }
+
+    /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+    @media screen and (max-width: 500px) {
+        font-size: $font-size;
+    }
 }
 
 .nav-link {
