--- a/themes/researcher/layouts/partials/header.html
+++ b/themes/researcher/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" >
+<div class="container header" >
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
             <div style="float:right">
             <a class="navbar-brand mx-0 mr-sm-auto" href="{{ .Site.BaseURL }}">
