--- a/themes/researcher/layouts/partials/header.html
+++ b/themes/researcher/layouts/partials/header.html
@@ -1,6 +1,6 @@
 <div class="container header" >
     <nav class="navbar navbar-expand-sm flex-column flex-sm-row text-nowrap p-0">
-            <div style="float:right">
+            <div style="float:right;text-align:center;">
             <a class="navbar-brand mx-0 mr-sm-auto" href="{{ .Site.BaseURL }}">
               {{ if .Title }}{{ .Title }}{{ end }}
             </a>
@@ -18,8 +18,6 @@
                     {{ end }}
                 {{ end }}
             </div>
-
-<br>
 <br>
 <br>
 </div>
