--- a/themes/researcher/layouts/_default/list.html
+++ b/themes/researcher/layouts/_default/list.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-{{ range .Site.Taxonomies.tags }}
-<a href="{{ .Page.Permalink }}">{{ .Page.Title }}({{ .Count }})</a>
-{{ end }}
-<br>
-<br>
+<!-- {{ range .Site.Taxonomies.tags }} -->
+<!-- <a href="{{ .Page.Permalink }}">{{ .Page.Title }}({{ .Count }})</a> -->
+<!-- {{ end }} -->
+<!-- <br> -->
+<!-- <br> -->
 <div class="container">
     <ul>
         {{ range .Pages }}
