--- a/themes/anubis/assets/css/main.css
+++ b/themes/anubis/assets/css/main.css
@@ -1,3 +1,9 @@
+@font-face {
+  font-family: 'unifont';
+  src: url('/unifont.woff2') format('woff2');
+  unicode-range: U+00A0-00FF, U+0100-017F; /* additional glyphs */
+}
+
 :root {
     --font-color: #333;
     --bg-color: #fff;
