--- a/themes/anubis/assets/css/main.css
+++ b/themes/anubis/assets/css/main.css
@@ -14,7 +14,7 @@
     --nav-bg-color: #fafafa;
     --nav-link-color: #696969;
     --pre-color: #f8f8f2;
-    --pre-bg-color: #272822;
+    --pre-bg-color: #ffffff;
     --bq-color: #ccc;
     --hr-color: #ccc;
     --pagination-bg-color: #fafafa;
@@ -548,3 +548,5 @@ ul.language-select>li, ul.footer-menu>li {
     max-width: 10em;
 }
 }
+
+
