add: take the road most documented, change link col

--- a/themes/anubis/assets/css/main.css
+++ b/themes/anubis/assets/css/main.css
@@ -28,7 +28,7 @@
 :root {
     --font-color: #eee;
     --bg-color: #000006;
-    --link-color: #5f8787;
+    --link-color: #8cc7c7;
     --link-state-color: #ff5858;
     --link-state-border-color: rgba(238,  54,  54,  0.5);
     --thead-bg-color: #000006;
