--- a/themes/anubis/layouts/partials/favicons.html
+++ b/themes/anubis/layouts/partials/favicons.html
@@ -1,2 +1,3 @@
-<link rel="icon" type="image/x-icon" href="{{ "favicon.ico" | absURL }}">
-<link rel="apple-touch-icon-precomposed" href="{{ "favicon.png" | absURL }}">
+<link rel="icon" type="image/x-icon" href="{{ "/favicon.ico" | absURL }}">
+<link rel="icon" type="image/png" href="{{ "/favicon.png" | absURL }}">
+<link rel="apple-touch-icon-precomposed" href="{{ "/favicon.png" | absURL }}">
