--- a/themes/anubis/layouts/partials/head.html
+++ b/themes/anubis/layouts/partials/head.html
@@ -1,4 +1,5 @@
 <!-- Basic stuff -->
+<link rel="preload" href="/unifont.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="HandheldFriendly" content="True">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
