--- a/themes/anubis/layouts/partials/header.html
+++ b/themes/anubis/layouts/partials/header.html
@@ -1,6 +1,8 @@
 <div class="header-top">
     {{ partial "site-title.html" . }}
 </div>
+
+<img src="/dithered-tree-contrast.gif" alt="Dithered Tree" style="display: block; margin: 0 auto;">
 {{ if .Site.Menus.main }}
     <nav>
         {{ $currentPage := . }}
