change height of tree

--- a/themes/anubis/layouts/partials/header.html
+++ b/themes/anubis/layouts/partials/header.html
@@ -2,7 +2,7 @@
     {{ partial "site-title.html" . }}
 </div>
 
-<img src="/dithered-tree-contrast.gif" alt="Dithered Tree" style="display: block; margin: 0 auto;">
+<img src="/dithered-tree-contrast.gif" alt="Dithered Tree" style="display: block; margin: 0 auto; max-height: 20vh;">
 {{ if .Site.Menus.main }}
     <nav>
         {{ $currentPage := . }}
