--- a/themes/anubis/layouts/_default/list.html
+++ b/themes/anubis/layouts/_default/list.html
@@ -10,8 +10,7 @@
             <div class="post-short-list h-entry">
                 <div class="post-header">
                     <header>
-                        <h2 class="p-name post-title{{ if .Params.favorite }} favorite{{end}}{{ if .Params.draft }} draft{{end}}"><a class="u-url" href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></h2>
-                        {{ partial "post-language-switcher.html" . }}
+                        <div class="p-name post-title{{ if .Params.draft }} draft{{end}}"><a class="u-url" href="{{ .RelPermalink }}">{{ trim .Title " " }}</a></div>
                     </header>
                 </div>
                 {{ partial "post-info.html" . }}
