--- a/themes/anubis/assets/css/main.css
+++ b/themes/anubis/assets/css/main.css
@@ -8,6 +8,8 @@
     font-size: 28px;
     --font-color: #fafffb;
     --font-size: 1rem;
+    --dropdown-font-size: 1rem;
+    --button-font-size: 1rem;
     --bg-color: #000006;
     --link-color: #ccffdd;
     --link-state-color: #ccffdd;
@@ -58,10 +60,10 @@ main {
     outline: none;
 }
 h1 {
-    font-size: calc(var(--font-size) * 1.1);
+    font-size: calc(var(--font-size) * 1.5);
 }
 h2 {
-    font-size: calc(var(--font-size) * 1.05);
+    font-size: calc(var(--font-size) * 1.3);
 }
 h3 {
     font-size: calc(var(--font-size) * 1.05);
@@ -156,13 +158,13 @@ header a {
     color: var(--font-color);
 }
 header h1 {
-    font-size: calc(var(--font-size) * 1.1);
+    font-size: calc(var(--font-size) * 1.5);
     margin-top: 1em;
     margin-bottom: 0;
     font-weight: 400;
 }
 header h2 {
-    font-size: calc(var(--font-size) * 1.05);
+    font-size: calc(var(--font-size) * 1.3);
     margin: 0;
     font-weight: 400;
 }
@@ -546,4 +548,48 @@ ul.language-select>li, ul.footer-menu>li {
 .post-pagination .pagination-item {
     max-width: 10em;
 }
+}
+
+
+.toc-dropdown {
+  position: fixed;
+  top: 1rem;
+  left: 50vw;
+  transform: translateX(-50%);
+  z-index: 9999;
+}
+
+.toc-button {
+  background: var(--bg-color);
+  border: 1px solid var(--table-border-color);
+  padding: 0.5rem 1rem;
+  border-radius: 6px;
+  cursor: pointer;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  color: var(--font-color);
+  font-size: var(--button-font-size);
+}
+
+.toc-menu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50vw;
+  transform: translateX(-50%);
+  max-height: 70vh;
+  overflow-y: auto;
+  background: var(--bg-color);
+  border: 1px solid var(--table-border-color);
+  border-radius: 6px;
+  padding: 0.5rem 1rem;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.15);
+  width: 250px;
+  font-size: var(--dropdown-font-size);
+}
+
+.toc-menu.open {
+  display: block;
+  width: max-content;
+  transform: translateX(-50vw);
+  max-width: 50vw;
 }
